--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: white;
+    background: #ebebeb;
     font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
 }
@@ -25,6 +25,6 @@ button {
 }
 
 #error {
-    color: red;
+    color: #e00000;
     font-weight: 200;
 }
